attempted fix for parallax scrolling issue on mobile

--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -170,8 +170,8 @@ html.home{
 
 	.parallax{
 	    // min-height: 550px; 
-	    height:300px;
-	    background-attachment: fixed;
+	    height:200px;
+	    background-attachment: scroll;
 	    background-position: center;
 	    background-repeat: no-repeat;
 	    background-size: cover;
@@ -182,12 +182,12 @@ html.home{
 		h2.header{
 		  position: absolute;
 		  z-index: 1000;
-		  top: 110px;
+		  top: 70px;
 		  color:white;
 		  text-align:center;
 		  display:inline-block;
 		  width:100%;
-		  font-size: 2.6em;
+		  font-size: 2.4em;
 
 		}
 
